--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body{
 
 .section {
     /*background-color: #627671;*/
-    background-color: #585d61;
+    /*background-color: #585d61;*/
+    background-color: #4f5357;
 }
 
 .spaced_up_vis1 {
